k8s/ingress-service/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # Allow only public actions access
    nginx.ingress.kubernetes.io/rewrite-target: /public/$1
spec:
  rules:
    - http:
        paths:
          - path: /mds/?(.*)
            backend:
              serviceName: mutant-determination-service-cluster-ip-service
              servicePort: 8080
          - path: /mss/?(.*)
            backend:
              serviceName: mutant-statistics-service-cluster-ip-service
              servicePort: 8080
